@@ -87,16 +87,16 @@ protected either.
 Display a short help message and exit successfully.
 .LP
 .TP
-\fB\-\-version\fR
+\fB\-\-version\fR, \fB\-V\fR
 Print version information and copyright information and exit successfully.
 .LP
 .TP
-\fB\-\-verbose\fR
+\fB\-\-verbose\fR, \fB\-v\fR
 Print status and progress information to standard\-error while processing
 the input.  Repeat for even more output.
 .LP
 .TP
-\fB\-\-output=\fR\fIFILE\fR
+\fB\-\-output=\fR\fIFILE\fR, \fB\-o\fR
 Redirect output to the file given instead of printing to standard\-output.
 .LP
 .TP
